moved to single JS file; tweaked readme; sample writes to window instead of log.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Testpad for Web MIDI API Shim</title>
-<script src="lib/MIDIBridge.js"></script>
+<title>Web MIDI API Polyfill</title>
 <script src="lib/WebMIDIAPI.js"></script>
 <script>
 var midi=null;
@@ -10,36 +9,41 @@ var inputs=null;
 var outputs=null;
 var input=null;
 var output=null;
+var log=null;
 
 function runTest() {
+	if (!log)
+		log = document.getElementById("log");
+	log.innerText = "Starting up MIDI...\n";
 	navigator.getMIDIAccess( success, failure );
 }
 
 function handleMIDIMessage( m ) {
 	// testing - just reflect.
+	log.innerText += "Message: 0x" + m[0].data[0].toString(16) + " 0x" + m[0].data[1].toString(16) + " 0x" + m[0].data[2].toString(16) + "\n";
 	if (output)
 		output.sendMessage( m[0].data[0], m[0].data[1], m[0].data[2] );
 }
 
 function success( m ) {
-	console.log("MIDI ready!");
+	log.innerText += "MIDI ready!\n";
 	midi = m;
 
 	inputs = midi.enumerateInputs();
-	console.log(""+inputs.length+" inputs:");
+	log.innerText += inputs.length+" inputs:\n";
 	for (var i=0;i<inputs.length;i++)
-		console.log(""+ i + ": " + inputs[i] );
+		log.innerText += i + ": " + inputs[i] + "\n";
 
 	if (inputs.length>0) {
 		input = midi.getInput( inputs[0] );
 		input.onmessage = handleMIDIMessage;
-		console.log("Hooked up first input.");
+		log.innerText += "Hooked up first input.\n";
 	}
 
 	outputs = midi.enumerateOutputs();
-	console.log(""+outputs.length+" outputs:");
+	log.innerText += outputs.length+" outputs:\n";
 	for (var i=0;i<outputs.length;i++)
-		console.log(""+ i + ": " + outputs[i] );
+		log.innerText += i + ": " + outputs[i] + "\n";
 
 	if (outputs.length) {
 		output = midi.getOutput( outputs[0] );
@@ -55,6 +59,7 @@ function failure(msg) {
 
 <body>
 	<button onclick="runTest();">Test MIDI!</button>
-
+<pre id="log">
+</pre>
 </body>
 </html>
