--- a/multi.html
+++ b/multi.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<title>Test of multiple inputs</title>
-<script src="lib/WebMIDIAPI.js"></script>
-<script>
+	<title>Test of multiple inputs</title>
+	<script src="lib/WebMIDIAPI.js"></script>
+	<script>
 var midi=null;
 var inputs=null;
 var outputs=null;
@@ -19,14 +19,16 @@ function runTest() {
 	navigator.getMIDIAccess( success, failure );
 }
 
-function handleMIDIMessage1( m ) {
+function handleMIDIMessage1( ev ) {
 	// testing - just reflect.
-	log.innerText += "Message on input 1: 0x" + m[0].data[0].toString(16) + " 0x" + m[0].data[1].toString(16) + " 0x" + m[0].data[2].toString(16) + "\n";
+	if (ev.data.length == 3)
+		log.innerText += "Message on input 1: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
 }
 
-function handleMIDIMessage2( m ) {
+function handleMIDIMessage2( ev ) {
 	// testing - just reflect.
-	log.innerText += "Message on input 2: 0x" + m[0].data[0].toString(16) + " 0x" + m[0].data[1].toString(16) + " 0x" + m[0].data[2].toString(16) + "\n";
+	if (ev.data.length == 3)
+		log.innerText += "Message on input 2: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
 }
 
 function success( m ) {
@@ -54,19 +56,19 @@ function success( m ) {
 
 	if (outputs.length) {
 		output = midi.getOutput( outputs[0] );
-		output.sendMessage( 0xb0, 0x00, 0x7f );	// If the first device is a Novation Launchpad, this will light it up!
+		output.send( [0xb0, 0x00, 0x7f] );	// If the first device is a Novation Launchpad, this will light it up!
 	}
 }
 
-function failure(msg) {
-	alert("failure - "+msg);
+function failure( errorCode ) {
+	alert( "Failed to initialize MIDI - " + ((errorCode==1) ? "permission denied" : ("error code " + errorCode)) );
 }
 </script>
 </head>
 
 <body>
 	<button onclick="runTest();">Test MIDI!</button>
-<pre id="log">
-</pre>
+	<pre id="log">
+	</pre>
 </body>
 </html>
