Sysex now supported.
You need to have v 1.2 of the Jazz plugin for this to work -
http://jazz-soft.net/download/Jazz-Plugin/1.2.

--- a/multi.html
+++ b/multi.html
@@ -60,8 +60,8 @@ function success( m ) {
 	}
 }
 
-function failure( errorCode ) {
-	alert( "Failed to initialize MIDI - " + ((errorCode==1) ? "permission denied" : ("error code " + errorCode)) );
+function failure( error ) {
+	alert( "Failed to initialize MIDI - " + ((error.code==1) ? "permission denied" : ("error code " + error.code)) );
 }
 </script>
 </head>
@@ -70,5 +70,6 @@ function failure( errorCode ) {
 	<button onclick="runTest();">Test MIDI!</button>
 	<pre id="log">
 	</pre>
+	<div id="MIDIPlugin" style="position:absolute; visibility:hidden"></div>
 </body>
 </html>
