--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function handleMIDIMessage( ev ) {
 	// testing - just reflect.
 	log.innerText += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3) 
-		log.innerText += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+		log.innerText += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
 	log.innerText += "\n";
 	if (output)
 		output.send( ev.data );
@@ -54,15 +54,16 @@ function success( midiAccess ) {
 	}
 }
 
-function failure( errorCode ) {
-	alert( "Failed to initialize MIDI - " + ((errorCode==1) ? "permission denied" : ("error code " + errorCode)) );
+function failure( error ) {
+	alert( "Failed to initialize MIDI - " + ((error.code==1) ? "permission denied" : ("error code " + error.code)) );
 }
 </script>
 </head>
 
 <body>
 	<button onclick="runTest();">Test MIDI!</button>
-<pre id="log">
-</pre>
+	<pre id="log">
+	</pre>
+	<div id="MIDIPlugin" style="position:absolute; visibility:hidden"></div>
 </body>
 </html>
