--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>To use the Web MIDI API Shim</h3>
-          <p>Just include "<code>&lt;script src='http://cwilso.github.com/WebMIDIAPIShim/WebMIDIAPI.js'&rt;&lt;/script&rt;" in your HTML source.</p>
+          <p>Just include "<code>&lt;script src='http://cwilso.github.com/WebMIDIAPIShim/WebMIDIAPI.js'&rt;&lt;/script&rt;</code>" in your HTML source.</p>
       </section>
     </div>
 
