--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>To use the Web MIDI API Shim</h3>
-          <p>Just include
+          <p>Just include</p>
           	<pre>&lt;script src='http://cwilso.github.com/WebMIDIAPIShim/WebMIDIAPI.js'&gt;&lt;/script&gt;</pre>
-          in your HTML source.</p>
+          <p>in your HTML source.</p>
       </section>
     </div>
 
