--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <pre>&lt;script src='http://cwilso.github.com/WebMIDIAPIShim/WebMIDIAPI.js'&gt;&lt;/script&gt;</pre>
     <p>in your HTML source.</p>
     <h3>Test it out!</h3>
-    <p><strong>Before you press the button:</strong> install the <a href="http://jazz-soft.net/">Jazz-Soft.net's Jazz-Plugin</a> to enable MIDI support on Windows and OSX.</p>
-    <p>On MacOS, you will also need a real synthesizer or something like <a href="http://www.manyetas.com/creed/midikeys.html">MidiKeys</a>. </p>
+    <p><strong>Before you press the button:</strong> install the <a href="http://jazz-soft.net/">Jazz-Soft.net's Jazz-Plugin</a>, version 1.2 or higher to enable MIDI support on Windows and OSX.</p>
+    <p>You will also want some MIDI input/output devices - MacOS and Windows typically have output software synthesizers installed by default.
+    On MacOS, if you want a software input device you may want to install <a href="http://www.manyetas.com/creed/midikeys.html">MidiKeys</a>. </p>
     <button onclick="runTest();">Test MIDI!</button>
     <pre id="log">
 	</pre>
