--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function success( midiAccess ) {
 	log.innerText += "MIDI ready!\n";
 	midi = midiAccess;
 
-	inputs = midi.enumerateInputs();
+	inputs = midi.getInputs();
 	log.innerText += inputs.length+" inputs:\n";
 	for (var i=0;i<inputs.length;i++)
 		log.innerText += i + ": " + inputs[i] + "\n";
@@ -90,7 +90,7 @@ function success( midiAccess ) {
 		log.innerText += "Hooked up first input.\n";
 	}
 
-	outputs = midi.enumerateOutputs();
+	outputs = midi.getOutputs();
 	log.innerText += outputs.length+" outputs:\n";
 	for (var i=0;i<outputs.length;i++)
 		log.innerText += i + ": " + outputs[i] + "\n";
