--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function runTest() {
 	if (!log)
 		log = document.getElementById("log");
 	log.innerText = "Starting up MIDI...\n";
-	navigator.getMIDIAccess( success, failure );
+	navigator.requestMIDIAccess( success, failure );
 }
 
 function handleMIDIMessage( ev ) {
