--- a/tests/index.html
+++ b/tests/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Web MIDI API Polyfill</title>
 <script src="../WebMIDIAPI.js"></script>
 <script>
@@ -14,40 +15,40 @@ var log=null;
 function runTest() {
 	if (!log)
 		log = document.getElementById("log");
-	log.innerText = "Starting up MIDI...\n";
+	log.innerHTML = "Starting up MIDI...\n";
 	navigator.requestMIDIAccess( success, failure );
 }
 
 function handleMIDIMessage( ev ) {
 	// testing - just reflect.
-	log.innerText += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
+	log.innerHTML += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3) 
-		log.innerText += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
-	log.innerText += "\n";
+		log.innerHTML += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
+	log.innerHTML += "\n";
 	if (output)
 		output.send( ev.data );
 }
 
 function success( midiAccess ) {
-	log.innerText += "MIDI ready!\n";
+	log.innerHTML += "MIDI ready!\n";
 	midi = midiAccess;
 
-	inputs = midi.enumerateInputs();
-	log.innerText += inputs.length+" inputs:\n";
+	inputs = midi.getInputs();
+	log.innerHTML += inputs.length+" inputs:\n";
 	for (var i=0;i<inputs.length;i++)
-		log.innerText += i + ": " + inputs[i] + "\n";
+		log.innerHTML += i + ": " + inputs[i] + "\n";
 
 	if (inputs.length>0) {
 		input = midi.getInput( inputs[0] );
 //		input.onmessage = handleMIDIMessage;
 		input.addEventListener("message", handleMIDIMessage);
-		log.innerText += "Hooked up first input.\n";
+		log.innerHTML += "Hooked up first input.\n";
 	}
 
-	outputs = midi.enumerateOutputs();
-	log.innerText += outputs.length+" outputs:\n";
+	outputs = midi.getOutputs();
+	log.innerHTML += outputs.length+" outputs:\n";
 	for (var i=0;i<outputs.length;i++)
-		log.innerText += i + ": " + outputs[i] + "\n";
+		log.innerHTML += i + ": " + outputs[i] + "\n";
 
 	if (outputs.length) {
 		output = midi.getOutput( outputs[0] );
