--- a/multi.html
+++ b/multi.html
@@ -21,14 +21,26 @@ function runTest() {
 
 function handleMIDIMessage1( ev ) {
 	// testing - just reflect.
-	if (ev.data.length == 3)
-		log.innerText += "Message on input 1: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	var l = ev.data.length;
+	var str = "Message on input 1:";
+
+	for (var i=0; i<l; i++)
+		str += " 0x" + ev.data[i].toString(16);
+	str += "\n";
+
+	log.innerText += str;
 }
 
 function handleMIDIMessage2( ev ) {
 	// testing - just reflect.
-	if (ev.data.length == 3)
-		log.innerText += "Message on input 2: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	var l = ev.data.length;
+	var str = "Message on input 2:";
+
+	for (var i=0; i<l; i++)
+		str += " 0x" + ev.data[i].toString(16);
+	str += "\n";
+
+	log.innerText += str;
 }
 
 function success( m ) {
