--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function runTest() {
 	if (!log)
 		log = document.getElementById("log");
 	log.innerText = "Starting up MIDI...\n";
-	navigator.requestMIDIAccess( success, failure );
+	navigator.requestMIDIAccess().then( success, failure );
 }
 
 function handleMIDIMessage( ev ) {
@@ -79,25 +79,25 @@ function success( midiAccess ) {
 	log.innerText += "MIDI ready!\n";
 	midi = midiAccess;
 
-	inputs = midi.getInputs();
+	inputs = midi.inputs();
 	log.innerText += inputs.length+" inputs:\n";
 	for (var i=0;i<inputs.length;i++)
-		log.innerText += i + ": " + inputs[i] + "\n";
+		log.innerText += i + ": " + inputs[i].name + "\n";
 
 	if (inputs.length>0) {
-		input = midi.getInput( inputs[0] );
+		input = inputs[0];
 //		input.onmessage = handleMIDIMessage;
-		input.addEventListener("message", handleMIDIMessage);
+		input.addEventListener("midimessage", handleMIDIMessage);
 		log.innerText += "Hooked up first input.\n";
 	}
 
-	outputs = midi.getOutputs();
+	outputs = midi.outputs();
 	log.innerText += outputs.length+" outputs:\n";
 	for (var i=0;i<outputs.length;i++)
-		log.innerText += i + ": " + outputs[i] + "\n";
+		log.innerText += i + ": " + outputs[i].name + "\n";
 
 	if (outputs.length) {
-		output = midi.getOutput( outputs[0] );
+		output = outputs[0];
 		output.send( [0xb0, 0x00, 0x7f] );	// If the first device is a Novation Launchpad, this will light it up!
 	}
 }
