--- a/tests/index.html
+++ b/tests/index.html
@@ -15,43 +15,43 @@ var log=null;
 function runTest() {
 	if (!log)
 		log = document.getElementById("log");
-	log.innerHTML = "Starting up MIDI...\n";
-	navigator.requestMIDIAccess( success, failure );
+	log.innerText = "Starting up MIDI...\n";
+	navigator.requestMIDIAccess().then( success, failure );
 }
 
 function handleMIDIMessage( ev ) {
 	// testing - just reflect.
-	log.innerHTML += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
+	log.innerText += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3) 
-		log.innerHTML += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
-	log.innerHTML += "\n";
+		log.innerText += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
+	log.innerText += "\n";
 	if (output)
 		output.send( ev.data );
 }
 
 function success( midiAccess ) {
-	log.innerHTML += "MIDI ready!\n";
+	log.innerText += "MIDI ready!\n";
 	midi = midiAccess;
 
-	inputs = midi.getInputs();
-	log.innerHTML += inputs.length+" inputs:\n";
+	inputs = midi.inputs();
+	log.innerText += inputs.length+" inputs:\n";
 	for (var i=0;i<inputs.length;i++)
-		log.innerHTML += i + ": " + inputs[i] + "\n";
+		log.innerText += i + ": " + inputs[i].name + "\n";
 
 	if (inputs.length>0) {
-		input = midi.getInput( inputs[0] );
+		input = inputs[0];
 //		input.onmessage = handleMIDIMessage;
-		input.addEventListener("message", handleMIDIMessage);
-		log.innerHTML += "Hooked up first input.\n";
+		input.addEventListener("midimessage", handleMIDIMessage);
+		log.innerText += "Hooked up first input.\n";
 	}
 
-	outputs = midi.getOutputs();
-	log.innerHTML += outputs.length+" outputs:\n";
+	outputs = midi.outputs();
+	log.innerText += outputs.length+" outputs:\n";
 	for (var i=0;i<outputs.length;i++)
-		log.innerHTML += i + ": " + outputs[i] + "\n";
+		log.innerText += i + ": " + outputs[i].name + "\n";
 
 	if (outputs.length) {
-		output = midi.getOutput( outputs[0] );
+		output = outputs[0];
 		output.send( [0xb0, 0x00, 0x7f] );	// If the first device is a Novation Launchpad, this will light it up!
 	}
 }
