--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function success( midiAccess ) {
 
 	if (inputs.length>0) {
 		input = inputs[0];
-//		input.onmessage = handleMIDIMessage;
+//		input.onmidimessage = handleMIDIMessage;
 		input.addEventListener("midimessage", handleMIDIMessage);
 		log.innerHTML += "Hooked up first input.\n";
 	}
