--- a/tests/multi.html
+++ b/tests/multi.html
@@ -23,12 +23,16 @@ function handleMIDIMessage1( ev ) {
 	// testing - just reflect.
 	if (ev.data.length == 3)
 		log.innerText += "Message on input 1: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	if (output)
+		output.send( ev.data );
 }
 
 function handleMIDIMessage2( ev ) {
 	// testing - just reflect.
 	if (ev.data.length == 3)
 		log.innerText += "Message on input 2: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	if (output)
+		output.send( ev.data );
 }
 
 function success( m ) {
