--- a/tests/MIDITest.html
+++ b/tests/MIDITest.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Web MIDI test</title>
+<script src="../WebMIDIAPI.js"></script>
 <script>
 var midi=null;
 var inputs=null;
@@ -12,46 +13,60 @@ var output=null;
 var log=null;
 
 function runTest() {
-	if (!log)
+	if (!log){
 		log = document.getElementById("log");
-	log.innerText = "Starting up MIDI...\n";
+	}
+	log.textContent = "Starting up MIDI...\n";
 	navigator.requestMIDIAccess().then( success, failure );
 }
 
 function handleMIDIMessage( ev ) {
 	// testing - just reflect.
-	log.innerText += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
-	if (ev.data.length == 3) 
-		log.innerText += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
+	log.textContent += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
+	if (ev.data.length == 3)
+		log.textContent += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
 	if (output) {
 		output.send( ev.data );
-		log.innerText += " reflected to output '" + output.name + "'";
+		log.textContent += " reflected to output '" + output.name + "'";
 	}
-	log.innerText += "\n";
+	log.textContent += "\n";
 }
 
 function success( midiAccess ) {
-	log.innerText += "MIDI ready!\n";
+	var i, iterator;
+	log.textContent += "MIDI ready!\n";
 	midi = midiAccess;
 
-	inputs = midi.inputs();
-	log.innerText += inputs.length+" inputs:\n";
-	for (var i=0;i<inputs.length;i++)
-		log.innerText += i + ": " + inputs[i].name + "\n";
+	inputs = midi.inputs;
+	log.textContent += inputs.size+" inputs:\n";
 
-	if (inputs.length>0) {
-		input = inputs[0];
+	i = 0;
+    iterator = inputs.values();
+    while((data = iterator.next()).done === false){
+        port = data.value;
+        log.innerHTML += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
+    }
+
+	if (inputs.size>0) {
+		iterator = inputs.values();
+		input = iterator.next().value;
 		input.onmidimessage = handleMIDIMessage;
-		log.innerText += "Hooked up first input: " + input.name + ".\n";
+		log.textContent += "Hooked up first input: " + input.name + ".\n";
 	}
 
-	outputs = midi.outputs();
-	log.innerText += outputs.length+" outputs:\n";
-	for (var i=0;i<outputs.length;i++)
-		log.innerText += i + ": " + outputs[i].name + "\n";
+	outputs = midi.outputs;
+	log.textContent += outputs.size+" outputs:\n";
 
-	if (outputs.length) {
-		output = outputs[0];
+	i = 0;
+    iterator = outputs.values();
+    while((data = iterator.next()).done === false){
+        port = data.value;
+        log.innerHTML += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
+    }
+
+	if (outputs.size > 0) {
+		iterator = outputs.values();
+		output = iterator.next().value;
 	}
 }
 
