--- a/tests/MIDITest.html
+++ b/tests/MIDITest.html
@@ -35,7 +35,7 @@ function handleMIDIMessage( ev ) {
 function success( midiAccess ) {
 	var i, iterator;
 	log.textContent += "MIDI ready!\n";
-	midi = midiAccess;
+	midi = window.updateMIDIAccess(midiAccess);
 
 	inputs = midi.inputs;
 	log.textContent += inputs.size+" inputs:\n";
