--- a/tests/index.html
+++ b/tests/index.html
@@ -32,7 +32,7 @@ function handleMIDIMessage( ev ) {
 function success( midiAccess ) {
 	var i, iterator, data, port;
 	log.textContent += "MIDI ready!\n";
-	midi = window.updateMIDIAccess(midiAccess);
+	midi = midiAccess;
 
 	inputs = midi.inputs;
 	log.textContent += inputs.size+" inputs:\n";
