--- a/tests/multi.html
+++ b/tests/multi.html
@@ -48,13 +48,11 @@ function success( midiAccess ) {
     iterator = inputs.values();
     while((data = iterator.next()).done === false){
         port = data.value;
-        log.innerHTML += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
+        log.textContent += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
     }
 
 	if (inputs.size>=2) {
 		iterator = inputs.values();
-		iterator.next()
-		iterator.next()
 		input1 = iterator.next().value;
 		input1.addEventListener( "midimessage", handleMIDIMessage1 );
 		log.textContent += "Hooked up first input.\n";
@@ -70,7 +68,7 @@ function success( midiAccess ) {
     iterator = outputs.values();
     while((data = iterator.next()).done === false){
         port = data.value;
-        log.innerHTML += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
+        log.textContent += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
     }
 
 	if (outputs.size > 0) {
