updated to the WebMIDI API implementation in Chrome 43

--- a/examples/routing.html
+++ b/examples/routing.html
@@ -27,7 +27,7 @@
         clear: both;
     }
 </style>
-<script src="../WebMIDIAPI.js"></script>
+<script src="../build/WebMIDIAPIShim.js"></script>
 <script>
 
 window.onload = function(){
