--- a/examples/MIDITest.html
+++ b/examples/MIDITest.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Web MIDI API Polyfill</title>
-<script src="../WebMIDIAPI.js"></script>
+<title>Web MIDI test</title>
+<script src="../build/WebMIDIAPIShim.js"></script>
 <script>
 var midi=null;
 var inputs=null;
@@ -13,8 +13,9 @@ var output=null;
 var log=null;
 
 function runTest() {
-	if (!log)
+	if (!log){
 		log = document.getElementById("log");
+	}
 	log.textContent = "Starting up MIDI...\n";
 	navigator.requestMIDIAccess().then( success, failure );
 }
@@ -24,13 +25,15 @@ function handleMIDIMessage( ev ) {
 	log.textContent += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3)
 		log.textContent += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
-	log.textContent += "\n";
-	if (output)
+	if (output) {
 		output.send( ev.data );
+		log.textContent += " reflected to output '" + output.name + "'";
+	}
+	log.textContent += "\n";
 }
 
 function success( midiAccess ) {
-	var i, iterator, data, port;
+	var i, iterator;
 	log.textContent += "MIDI ready!\n";
 	midi = midiAccess;
 
@@ -47,9 +50,8 @@ function success( midiAccess ) {
 	if (inputs.size>0) {
 		iterator = inputs.values();
 		input = iterator.next().value;
-//		input.onmessage = handleMIDIMessage;
-		input.addEventListener("midimessage", handleMIDIMessage);
-		log.textContent += "Hooked up first input.\n";
+		input.onmidimessage = handleMIDIMessage;
+		log.textContent += "Hooked up first input: " + input.name + ".\n";
 	}
 
 	outputs = midi.outputs;
@@ -65,8 +67,6 @@ function success( midiAccess ) {
 	if (outputs.size > 0) {
 		iterator = outputs.values();
 		output = iterator.next().value;
-		//output.send( [0xb0, 0x00, 0x7f] );	// If the first device is a Novation Launchpad, this will light it up!
-		output.send( [0x90, 60, 100] );	// If the first device is a synth, you will hear a note
 	}
 }
 
