--- a/examples/multi.html
+++ b/examples/multi.html
@@ -1,39 +1,43 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Web MIDI test</title>
-<script src="../WebMIDIAPI.js"></script>
-<script>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<title>Test of multiple inputs</title>
+	<script src="../build/WebMIDIAPIShim.js"></script>
+	<script>
 var midi=null;
 var inputs=null;
 var outputs=null;
 var input=null;
+var input2=null;
 var output=null;
 var log=null;
 
 function runTest() {
-	if (!log){
+	if (!log)
 		log = document.getElementById("log");
-	}
 	log.textContent = "Starting up MIDI...\n";
 	navigator.requestMIDIAccess().then( success, failure );
 }
 
-function handleMIDIMessage( ev ) {
+function handleMIDIMessage1( ev ) {
 	// testing - just reflect.
-	log.textContent += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3)
-		log.textContent += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
-	if (output) {
+		log.textContent += "Message on input 1: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	if (output)
 		output.send( ev.data );
-		log.textContent += " reflected to output '" + output.name + "'";
-	}
-	log.textContent += "\n";
+}
+
+function handleMIDIMessage2( ev ) {
+	// testing - just reflect.
+	if (ev.data.length == 3)
+		log.textContent += "Message on input 2: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+	if (output)
+		output.send( ev.data );
 }
 
 function success( midiAccess ) {
-	var i, iterator;
+	var i, iterator, data, port;
 	log.textContent += "MIDI ready!\n";
 	midi = midiAccess;
 
@@ -47,11 +51,14 @@ function success( midiAccess ) {
         log.textContent += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
     }
 
-	if (inputs.size>0) {
+	if (inputs.size>=2) {
 		iterator = inputs.values();
-		input = iterator.next().value;
-		input.onmidimessage = handleMIDIMessage;
-		log.textContent += "Hooked up first input: " + input.name + ".\n";
+		input1 = iterator.next().value;
+		input1.addEventListener( "midimessage", handleMIDIMessage1 );
+		log.textContent += "Hooked up first input.\n";
+		input2 = iterator.next().value;
+		input2.addEventListener( "midimessage", handleMIDIMessage2 );
+		log.textContent += "Hooked up second input.\n";
 	}
 
 	outputs = midi.outputs;
@@ -67,6 +74,8 @@ function success( midiAccess ) {
 	if (outputs.size > 0) {
 		iterator = outputs.values();
 		output = iterator.next().value;
+		//output.send( [0xb0, 0x00, 0x7f] ); // If the first device is a Novation Launchpad, this will light it up!
+		output.send( [0x90, 60, 100] );	// If the first device is a synth, you will hear a note
 	}
 }
 
