--- a/examples/test0.html
+++ b/examples/test0.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<title>Test of multiple inputs</title>
-	<script src="../WebMIDIAPI.js"></script>
-	<script>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Web MIDI API Polyfill</title>
+<script src="../build/WebMIDIAPIShim.js"></script>
+<script>
 var midi=null;
 var inputs=null;
 var outputs=null;
 var input=null;
-var input2=null;
 var output=null;
 var log=null;
 
@@ -20,18 +19,12 @@ function runTest() {
 	navigator.requestMIDIAccess().then( success, failure );
 }
 
-function handleMIDIMessage1( ev ) {
+function handleMIDIMessage( ev ) {
 	// testing - just reflect.
+	log.textContent += "Message: " + ev.data.length + " bytes, timestamp: " + ev.timestamp;
 	if (ev.data.length == 3)
-		log.textContent += "Message on input 1: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
-	if (output)
-		output.send( ev.data );
-}
-
-function handleMIDIMessage2( ev ) {
-	// testing - just reflect.
-	if (ev.data.length == 3)
-		log.textContent += "Message on input 2: 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16) + "\n";
+		log.textContent += " 0x" + ev.data[0].toString(16) + " 0x" + ev.data[1].toString(16) + " 0x" + ev.data[2].toString(16);
+	log.textContent += "\n";
 	if (output)
 		output.send( ev.data );
 }
@@ -51,14 +44,12 @@ function success( midiAccess ) {
         log.textContent += i++ + ": " + port.name + "; manufacturer: " + port.manufacturer + "; version: " + port.version + "\n";
     }
 
-	if (inputs.size>=2) {
+	if (inputs.size>0) {
 		iterator = inputs.values();
-		input1 = iterator.next().value;
-		input1.addEventListener( "midimessage", handleMIDIMessage1 );
+		input = iterator.next().value;
+//		input.onmessage = handleMIDIMessage;
+		input.addEventListener("midimessage", handleMIDIMessage);
 		log.textContent += "Hooked up first input.\n";
-		input2 = iterator.next().value;
-		input2.addEventListener( "midimessage", handleMIDIMessage2 );
-		log.textContent += "Hooked up second input.\n";
 	}
 
 	outputs = midi.outputs;
@@ -74,7 +65,7 @@ function success( midiAccess ) {
 	if (outputs.size > 0) {
 		iterator = outputs.values();
 		output = iterator.next().value;
-		//output.send( [0xb0, 0x00, 0x7f] ); // If the first device is a Novation Launchpad, this will light it up!
+		//output.send( [0xb0, 0x00, 0x7f] );	// If the first device is a Novation Launchpad, this will light it up!
 		output.send( [0x90, 60, 100] );	// If the first device is a synth, you will hear a note
 	}
 }
