--- a/examples/list_devices/index.html
+++ b/examples/list_devices/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
     <title>WebMIDIAPIShim 2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="../../browser/WebMIDIAPI.js"></script>
+    <script src="../../browser/build.min.js"></script>
     <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../stylesheets/reset.css">
-    <link rel="stylesheet" type="text/css" href="../../stylesheets/prism.css">
+    <link rel="stylesheet" type="text/css" href="../../gh-page/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="../../gh-page/styles/prism.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
@@ -19,7 +19,7 @@
         <div id="outputs"></div>
     </div>
     <pre class="line-numbers" data-src="main.js"></pre>
-    <script src="../../javascripts/prism.js"></script>
+    <script src="../../gh-page/scripts/prism.js"></script>
 
 </body>
 
