--- a/examples/routing_2/index.html
+++ b/examples/routing_2/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script src="../../build/WebMIDIAPI.min.js"></script>
     <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../gh-page/styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="../../gh-page/styles/prism.css">
+    <link rel="stylesheet" type="text/css" href="../../gh-pages/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="../../gh-pages/styles/prism.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
@@ -20,7 +20,7 @@
     <h4>incoming midi events:</h4>
     <div id="log"></div>
     <pre class="line-numbers" data-src="main.js"></pre>
-    <script src="../../gh-page/scripts/prism.js"></script>
+    <script src="../../gh-pages/scripts/prism.js"></script>
 </body>
 
 </html>
