fixed errors in README, separated examples and gh-pages assets

--- a/examples/list_devices/index.html
+++ b/examples/list_devices/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script src="../../build/WebMIDIAPI.min.js"></script>
     <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../gh-pages/styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="../../gh-pages/styles/prism.css">
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/prism.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
@@ -19,7 +19,7 @@
         <div id="outputs"></div>
     </div>
     <pre class="line-numbers" data-src="main.js"></pre>
-    <script src="../../gh-pages/scripts/prism.js"></script>
+    <script src="../js/prism.js"></script>
 
 </body>
 
