--- a/examples/node/index.html
+++ b/examples/node/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <title>WebMIDIAPIShim</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="../../gh-pages/styles/prism.css">
+    <link rel="stylesheet" type="text/css" href="../css/prism.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
     <pre class="line-numbers" data-src="main.js"></pre>
-    <script src="../../gh-pages/scripts/prism.js"></script>
+    <script src="../js/prism.js"></script>
 </body>
 
 </html>
